melhorias na optimizacao

--- a/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
+++ b/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
@@ -8,3 +8,32 @@
 \begin{document}
 \maketitle
 \section{Tables}
+
+\begin{table}
+\caption{HV. Mean and Standard Deviation}
+\label{table: HV}
+\centering
+\begin{scriptsize}
+\begin{tabular}{ll}
+\hline &  NSGAII\\
+\hline 
+MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  2.25e-01_{ 3.7e-02}$ \\
+\hline
+\end{tabular}
+\end{scriptsize}
+\end{table}
+
+\begin{table}
+\caption{HV. Median and Interquartile Range}
+\label{table: HV}
+\centering
+\begin{scriptsize}
+\begin{tabular}{ll}
+\hline &  NSGAII\\
+\hline 
+MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  2.25e-01_{ 5.2e-02}$ \\
+\hline
+\end{tabular}
+\end{scriptsize}
+\end{table}
+\end{document}
