--- a/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
+++ b/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
@@ -17,7 +17,7 @@
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  4.39e-01_{ 8.2e-03}$ \\
+MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  5.00e-01_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
@@ -31,7 +31,7 @@ MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  4.39e-01_{ 8.2e-03}$ \\
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  4.39e-01_{ 1.2e-02}$ \\
+MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  5.00e-01_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
