processo de criação de graficos

--- a/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
+++ b/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
@@ -17,7 +17,7 @@
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  5.00e-01_{ 0.0e+00}$ \\
+MyProblemDoubleExternalViaJAR & $  0.00e+00_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
@@ -31,7 +31,7 @@ MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  5.00e-01_{ 0.0e+00}$ \\
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  5.00e-01_{ 0.0e+00}$ \\
+MyProblemDoubleExternalViaJAR & $  0.00e+00_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
