--- a/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
+++ b/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
@@ -14,10 +14,10 @@
 \label{table: HV}
 \centering
 \begin{scriptsize}
-\begin{tabular}{ll}
-\hline &  NSGAII\\
+\begin{tabular}{lll}
+\hline & NSGAII &  SMSEMOA\\
 \hline 
-MyProblemDoubleExternalViaJAR & $  0.00e+00_{ 0.0e+00}$ \\
+MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  6.38e-01_{ 0.0e+00}$ & \cellcolor{gray25}$  5.98e-01_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
@@ -28,10 +28,10 @@ MyProblemDoubleExternalViaJAR & $  0.00e+00_{ 0.0e+00}$ \\
 \label{table: HV}
 \centering
 \begin{scriptsize}
-\begin{tabular}{ll}
-\hline &  NSGAII\\
+\begin{tabular}{lll}
+\hline & NSGAII &  SMSEMOA\\
 \hline 
-MyProblemDoubleExternalViaJAR & $  0.00e+00_{ 0.0e+00}$ \\
+MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  6.38e-01_{ 0.0e+00}$ & \cellcolor{gray25}$  5.98e-01_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
