pre-final commit

--- a/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
+++ b/experimentBaseDirectory/ExperimentsDoubleExternalViaJAR/latex/ExperimentsDoubleExternalViaJAR.tex
@@ -14,14 +14,10 @@
 \label{table: HV}
 \centering
 \begin{scriptsize}
-\begin{tabular}{lll}
-\hline & NSGAII &  SMSEMOA\\
+\begin{tabular}{ll}
+\hline &  NSGAII\\
 \hline 
-<<<<<<< HEAD
-MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  6.38e-01_{ 0.0e+00}$ & \cellcolor{gray25}$  5.98e-01_{ 0.0e+00}$ \\
-=======
-MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  6.89e-01_{ 0.0e+00}$ \\
->>>>>>> branch 'master' of https://github.com/ranao-iscteiulpt/ES2-2018-EIC1-44.git
+MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  3.10e-01_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
@@ -32,10 +28,10 @@ MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  6.89e-01_{ 0.0e+00}$ \\
 \label{table: HV}
 \centering
 \begin{scriptsize}
-\begin{tabular}{lll}
-\hline & NSGAII &  SMSEMOA\\
+\begin{tabular}{ll}
+\hline &  NSGAII\\
 \hline 
-
+MyProblemDoubleExternalViaJAR & \cellcolor{gray95}$  3.10e-01_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
