--- a/experimentBaseDirectory/MyProblemBinaryExternalViaJAR/latex/MyProblemBinaryExternalViaJAR.tex
+++ b/experimentBaseDirectory/MyProblemBinaryExternalViaJAR/latex/MyProblemBinaryExternalViaJAR.tex
@@ -8,3 +8,32 @@
 \begin{document}
 \maketitle
 \section{Tables}
+
+\begin{table}
+\caption{HV. Mean and Standard Deviation}
+\label{table: HV}
+\centering
+\begin{scriptsize}
+\begin{tabular}{ll}
+\hline &  NSGAII\\
+\hline 
+MyProblemBinaryExternalViaJAR & $  0.00e+00_{ 0.0e+00}$ \\
+\hline
+\end{tabular}
+\end{scriptsize}
+\end{table}
+
+\begin{table}
+\caption{HV. Median and Interquartile Range}
+\label{table: HV}
+\centering
+\begin{scriptsize}
+\begin{tabular}{ll}
+\hline &  NSGAII\\
+\hline 
+MyProblemBinaryExternalViaJAR & $  0.00e+00_{ 0.0e+00}$ \\
+\hline
+\end{tabular}
+\end{scriptsize}
+\end{table}
+\end{document}
